atualizações do site

--- a/PiBaristaMaster/src/main/webapp/index.html
+++ b/PiBaristaMaster/src/main/webapp/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/menuSuperior.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagens/img_icon/favicon.png" type="image/x-icon">
     <title>Barista Master</title>
 </head>
 
 <body>
+
 <div class="telaPrincipal">
 
-    <div class="containerBotoesIndex">
+    <nav class="menuSuperior">
+        <div><a href="https://baristamaster.com.br/">Home</a></div>
+        <div><a href="https://baristamaster.com.br/quemsomos">Quem somos</a></div>
+        <div><a href="https://baristamaster.com.br/eventos">Eventos</a></div>
+        <div><a href="https://baristamaster.com.br/menu">Menu</a></div>
+        <div><a href="https://baristamaster.com.br/cursos">Cursos</a></div>
+        <div><a href="https://baristamaster.com.br/contato">Contato</a></div>
+    </nav>
 
-        <button>
-            <label><a href="https://baristamaster.com.br/">Home</a></label>
-        </button>
-
-        <button>
-            <label><a href="https://baristamaster.com.br/quemsomos">Quem somos</a></label>
-        </button>
-
-        <button>
-            <label><a href="https://baristamaster.com.br/eventos">Eventos</a></label>
-        </button>
-
-        <button>
-            <label><a href="https://baristamaster.com.br/menu">Menu</a></label>
-        </button>
-
-        <button>
-            <label><a href="https://baristamaster.com.br/cursos">Cursos</a></label>
-        </button>
-
-        <button>
-            <label><a href="https://baristamaster.com.br/contato">Contato</a></label>
-        </button>
-
+    <div class="logoPrincipal" >
+        <div style="text-align: center;">
+            <img class="logotipo" src="imagens/Logotipo.png"/>
+        </div>
     </div>
+
 
 </div>
 
-<div class="telaLoja">
+<div class="telaQuemSomos">
 
 </div>
 
@@ -49,7 +39,7 @@
 
 </div>
 
-<div class="telaCurso">
+<div class="telaCursos">
 
 </div>
 
