--- a/PiBaristaMaster/src/main/webapp/cadastroProduto.html
+++ b/PiBaristaMaster/src/main/webapp/cadastroProduto.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <link href="css/cadastroProduto.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagens/img_icon/favicon.png" type="image/x-icon">
     <title>Cadastro de Produtos</title>
 </head>
 
