Preenchimento da DAO

--- a/PiBaristaMaster/src/main/webapp/cadastroProduto.html
+++ b/PiBaristaMaster/src/main/webapp/cadastroProduto.html
@@ -106,6 +106,15 @@
                     </div>
                 </div>
             </li>
+
+            <li>
+                <div>
+                    <label>Produto ativo:</label>
+                    <div>
+                        <input type="text" name="Produto_ativo" id="Produto_ativo">
+                    </div>
+                </div>
+            </li>
         </div>
         <div class="containerBotoes"> <!-- FALTA configurar corretamente o codigo dos botoes -->
             <button class="btIncluir" type="submit">Incluir</button>
