mudancas nos arquivos css index

--- a/PiBaristaMaster/src/main/webapp/cadastroProduto.html
+++ b/PiBaristaMaster/src/main/webapp/cadastroProduto.html
@@ -21,7 +21,8 @@
                 <div>
                     <label>Codigo:</label> <!-- nome do campo -->
                     <div>
-                        <input type="text" name="codigo_produto" id="codigo_produto"> <!-- "input" para que o usuario possa escrever o valor do campo -->
+                        <input type="text" name="codigo_produto" id="codigo_produto">
+                        <!-- "input" para que o usuario possa escrever o valor do campo -->
                     </div>
                 </div>
             </li>
