--- a/PiBaristaMaster/src/main/webapp/index.html
+++ b/PiBaristaMaster/src/main/webapp/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link href="css/index.css" rel="stylesheet"/>
-    <link href="css/menuSuperior.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./imagens/img_icon/favicon.png" type="image/x-icon">
     <title>Barista Master</title>
@@ -11,8 +10,7 @@
 
 <body>
 
-<div class="telaPrincipal">
-
+<section class="containerPrincipal">
     <nav class="menuSuperior">
         <div><a href="https://baristamaster.com.br/">Home</a></div>
         <div><a href="https://baristamaster.com.br/quemsomos">Quem somos</a></div>
@@ -21,34 +19,119 @@
         <div><a href="https://baristamaster.com.br/cursos">Cursos</a></div>
         <div><a href="https://baristamaster.com.br/contato">Contato</a></div>
     </nav>
+    <figure class="containerLogo">
+        <img class="logotipo" src="imagens/Logotipo.png" alt="logotipo da Barista Master" height="250" width="250"/>
+    </figure>
+</section>
 
-    <div class="logoPrincipal" >
-        <div style="text-align: center;">
-            <img class="logotipo" src="imagens/Logotipo.png"/>
+<section class="containerQuemSomos">
+    <div class="cxtexto">
+        <div class="cxt1">
+            <h1>UM COFFEE SHOP</h1>
+            <h2>
+                Onde você pode relaxar tomando um ótimo café, Saborear nossos lanches, refeições rápida e Sobremesas.
+            </h2>
+        </div>
+        <div class="cxt2">
+            <p>
+                Desde 2003, o expert Marcelo Guimarães vem difundindo o conceito Barista e se dedicando
+                a servir sempre os melhores cafés para seus clientes.
+                <br><br>
+                O nosso atendimento merece grande destaque, devido a agilidade na preparação dos
+                produtos, a sensibilidade para entender os nossos clientes e principalmente o conhecimento
+                para tratar o café de forma especial, fazendo que os nossos clientes tenham uma
+                experiência positiva e inesquecível.
+                <br><br>
+                Oferecemos também o serviço de Coffee Break para eventos, com um cardápio especial,
+                com pães, biscoitos, tortas doces e salgadas, nossa carta de cafés, chás, sucos, salgados,
+                docinhos, entre outras delícias.
+            </p>
         </div>
     </div>
+    <figure class="contImgLoja">
+        <img src="imagens/tela2_img1.png" alt="mesas, parede revestida de madeira e decoração com plantas" height="300"
+             width="300"/>
+        <img src="imagens/tela2_img2.png" alt="foto da entrada da loja e floreira" height="300" width="300"/>
+        <img src="imagens/tela2_img3.png" alt="foto da bancada alta com as banquetas pretas" height="300" width="300"/>
+    </figure>
+</section>
 
+<section class="containerEventos">
+    <figure class="contImgEventos">
+        <img class="imgEventos" src="imagens/tela3_img1.png"
+             alt="Balcão com Barista preparando um café na máquina de espresso"
+             max-height="400" max-width="400"/>
+    </figure>
+    <div class="contTxtEventos">
+        <div class="cxt1_eventos">
+            <h1>EVENTOS</h1>
+            <h2>Diversas opções de cafés e comidinhas para você harmonizar como quiser</h2>
+        </div>
+        <div class="cxt2_eventos">
+            <p>
+                <br>Os intervalos das reuniões, onde o objetivo não é apenas comer e sim que os participantes possam
+                socializar, relaxar, voltando para a reunião com mais disposição e concentração.
+                </br>
+                <br>Para esse serviço será disponibilizado um cardápio especial, com os melhores cafés, bolos e
+                petiscos.
+                </br>
+                <br>Entre em contato para solicitar um orçamento.</br>
+            </p>
+        </div>
+    </div>
+</section>
 
-</div>
+<section class="containerCursos">
+    <div class="contTxtCursos">
+        <h1>Curso de Barista</h1>
+        <h2>Exclusivo para você, apaixonado por café ou está iniciando nessa área</h2>
+    </div>
+    <section class="contImgCursos">
+        <figure class="imgIcon">
+            <img src="imagens/tela4_img3.png" height="133" width="220"/>
+        </figure>
+        <figure class="imgEspresso">
+            <img src="imagens/tela4_img1.png" height="208" width="208"/>
+        </figure>
+        <figure>
+            <img class="imgBarista" src="imagens/tela4_img2.png" height="500" width="434"/>
+        </figure>
+    </section>
+</section>
 
-<div class="telaQuemSomos">
-
-</div>
-
-<div class="telaEventos">
-
-</div>
-
-<div class="telaCursos">
-
-</div>
-
-<div class="telaMenu">
-
-</div>
-
+<section class="containerMenu">
+    <div class="contTxtMenu">
+        <h1> Menu </h1>
+        <h2>Para você, apaixonado por café, temos uma Carta de Cafés Especiais que vai do Espresso Gourmet aos mais
+            elaborados e deliciosos drinks.</h2>
+    </div>
+    <section class="contImgMenu">
+        <div>
+            <img src="imagens/img_icon/icon_coffee1.svg" alt="ilustração de uma xícara de café" />
+            <h2>Cafés</h2>
+        </div>
+        <div>
+            <img src="imagens/img_icon/icon_bolo1.svg" alt="ilustração de um bolo caseiro"/>
+            <h2>Bolos</h2>
+        </div>
+        <div>
+            <img src="imagens/img_icon/icon_cake1.svg" alt="ilustração de uma torta doce"/>
+            <h2>Sobremesas</h2>
+        </div>
+        <div>
+            <img src="imagens/img_icon/icon_lanche1.svg" alt="ilustração de um lanche"/>
+            <h2>Lanches</h2>
+        </div>
+    </section>
+</section>
 </body>
+
 <footer>
-    <div class="telaContato"></div>
+    <div class="containerContato">
+        <h1>Contato</h1>
+        <h2>TEL (11) 4172.6558</h2>
+        <h2>contato@baristamaster.com.br</h2>
+        <h2>Rua: Amador Bueno nº 757 - Santo Amaro/SP</h2>
+    </div>
 </footer>
 </html>
