--- a/PiBaristaMaster/src/main/webapp/index.html
+++ b/PiBaristaMaster/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <link href="css/index.css" rel="stylesheet"/>
     <link href="css/menuSuperior.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./imagens/img_icon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/img_icon/favicon.png" type="image/x-icon">
     <title>Barista Master</title>
 </head>
 
@@ -17,14 +17,14 @@
         <div><a href="https://baristamaster.com.br/">Home</a></div>
         <div><a href="https://baristamaster.com.br/quemsomos">Quem somos</a></div>
         <div><a href="https://baristamaster.com.br/eventos">Eventos</a></div>
-        <div><a href="https://baristamaster.com.br/menu">Menu</a></div>
+        <div><a href="/menu">Menu</a></div>
         <div><a href="https://baristamaster.com.br/cursos">Cursos</a></div>
         <div><a href="https://baristamaster.com.br/contato">Contato</a></div>
     </nav>
 
     <div class="logoPrincipal" >
         <div style="text-align: center;">
-            <img class="logotipo" src="imagens/Logotipo.png"/>
+            <img class="logotipo" src="img/Logotipo.png"/>
         </div>
     </div>
 
