--- a/PiBaristaMaster/src/main/webapp/login.html
+++ b/PiBaristaMaster/src/main/webapp/login.html
@@ -4,7 +4,7 @@
 <head>
   <link href="css/login.css" rel="stylesheet"/>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="./imagens/img_icon/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/img_icon/favicon.png" type="image/x-icon">
     <title>Login</title>
 </head>
 <body>
