--- a/PiBaristaMaster/src/main/webapp/login.html
+++ b/PiBaristaMaster/src/main/webapp/login.html
@@ -2,12 +2,17 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <link href="css/login.css" rel="stylesheet"/>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" href="img/img_icon/favicon.png" type="image/x-icon">
-    <title>Login</title>
+  <link href="css/index.css" rel="stylesheet" />
+  <link href="css/menuSuperior.css" rel="stylesheet" />
+  <link href="css/login.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="shortcut icon" href="./img/img_icon/favicon.png" type="image/x-icon" />
+  <title>Cursos</title>
 </head>
-<body>
 
+<body>
+<img class="Logotipo" src="img/Logotipo.png" alt="logotipo da Barista Master" height="150" width="150"/>
 </body>
 </html>
