--- a/PiBaristaMaster/src/main/webapp/eventos.html
+++ b/PiBaristaMaster/src/main/webapp/eventos.html
@@ -2,31 +2,54 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/html">
 
 <head>
-    <link href="css/rodape.css" rel="stylesheet" />
-    <link href="css/menuSuperior.css" rel="stylesheet" />
-    <link href="css/eventos.css" rel="stylesheet" />
-    <meta charset="UTF-8" />
+    <link href="css/rodape.css" rel="stylesheet"/>
+    <link href="css/menuSuperior.css" rel="stylesheet"/>
+    <link href="css/eventos.css" rel="stylesheet"/>
+    <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="shortcut icon" href="./img/img_icon/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/img_icon/favicon.png" type="image/x-icon"/>
     <title>Eventos</title>
 </head>
 <body>
-<nav class="menuSuperior">
-    <div><a href="index.html">Home</a></div>
-    <div><a href="quemSomos.html">Quem somos</a></div>
-    <div><a href="eventos.html">Eventos</a></div>
-    <div><a href="menu.jsp">Menu</a></div>
-    <div><a href="cursos.html">Cursos</a></div>
-    <div><a href="#rodape">Contato</a></div>
-</nav>
-</body>
-<section class="containerEventosPrincipal">
-    <br><br>
-    <h1>Eventos em construção!!!</h1>
+<section class="containerCursosBaristaPrincipal">
+    <nav class="menuSuperior">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="quemSomos.html">Quem somos</a></div>
+        <div><a href="eventos.html">Eventos</a></div>
+        <div><a href="menu.jsp">Menu</a></div>
+        <div><a href="cursos.html">Cursos</a></div>
+        <div><a href="#rodape">Contato</a></div>
+    </nav>
+    <figure class="containerLogoCursoBarista">
+        <img src="img/Logotipo.png" alt="logotipo da Barista Master" height="150" width="150"/
+    </figure>
+    <div class="containerCursoBaristaTitulo">
+        <h1>EVENTOS</h1>
+        <h2>Diversas opções de cafés e comidinhas<br>
+            para você harmonizar como quiser</h2>
+    </div>
 </section>
+<section class="containerTitulo">
+    <h2>Conheça a loja que combina ambiente aconchegante,<br>
+        expertise em café e deliciosas opções para harmonizar.</h2>
+</section>
+<section class="conteinerDescritivoCurso">
+    <div>
+        <div>
+            <h1>Coffee Break</h1>
+            <p>Os intervalos das reuniões, onde o objetivo não é apenas comer e sim que os participantes possam
+                socializar, relaxar, voltando para a reunião com mais disposição e concentração. Para esse serviço será
+                disponibilizado um cardápio especial.</p>
+        </div>
+        <div>
+            <p>Entre em contato para solicitar um orçamento.</p>
+        </div>
+    </div>
+</section>
+</body>
 <footer>
-    <section class="footer-container" >
+    <section class="footer-container">
         <div>
             <img class="logoHorizontal" src="img/Logotipo_horizontal.png" alt="Logo">
         </div>
