--- a/PiBaristaMaster/src/main/webapp/index.html
+++ b/PiBaristaMaster/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<!--atualizado 20/05/2023-->
+<!--atualizado 01/06/2023-->
 <section class="containerPrincipal">
     <nav class="menuSuperior">
         <div><a href="index.html">Home</a></div>
@@ -23,6 +23,7 @@
         <div><a href="cursos.html">Cursos</a></div>
         <div><a href="#rodape">Contato</a></div>
     </nav>
+    <div class="btLogin"><a href="login.html">Login</a></div>
     <img class="logotipo" src="img/Logotipo.png" alt="logotipo da Barista Master"/>
     <figure class="containerImgPrincipal">
         <div class="imgPrincipal1">
@@ -35,7 +36,7 @@
         </div>
     </figure>
 </section>
-<!--Quem somos atualizado em 20/05/2023-->
+<!--Quem somos atualizado em 01/06/2023-->
 <section class="containerQuemSomos">
     <div class="cxtexto">
         <div class="cxt1">
@@ -66,7 +67,7 @@
         <img src="img/tela2_img3.png" alt="foto da bancada alta com as banquetas pretas"/>
     </figure>
 </section>
-<!--Eventos atualizado em 20/05/2023-->
+<!--Eventos atualizado em 01/06/2023-->
 <section class="containerEventos">
     <div class="cxt1_eventos">
         <h1>Eventos</h1>
@@ -87,7 +88,7 @@
         </div>
     </div>
 </section>
-<!--Cursos atualizado em 20/05/2023-->
+<!--Cursos atualizado em 01/06/2023-->
 <section class="containerCursos">
     <div class="contTxtCursos">
         <h1>Curso de Barista</h1>
@@ -109,19 +110,20 @@
     <section class="contImgMenu">
         <div>
             <img src="img/img_icon/icon_coffee1.svg" alt="ilustração de uma xícara de café"/>
-            <h2>Cafés</h2>
+            <h2><a href="http://localhost:8080/menu.jsp#cafe">Cafés</a></h2>
+
         </div>
         <div>
             <img src="img/img_icon/icon_bolo1.svg" alt="ilustração de um bolo caseiro"/>
-            <h2>Bolos</h2>
+            <h2><a href="http://localhost:8080/menu.jsp#bolo">Bolos</a></h2>
         </div>
         <div>
             <img src="img/img_icon/icon_cake1.svg" alt="ilustração de uma torta doce"/>
-            <h2>Sobremesas</h2>
+            <h2><a href="http://localhost:8080/menu.jsp#sobremesa">Sobremesas</a></h2>
         </div>
         <div>
             <img src="img/img_icon/icon_lanche1.svg" alt="ilustração de um lanche"/>
-            <h2>Lanches</h2>
+            <h2><a href="http://localhost:8080/menu.jsp#lanche">Lanches</a></h2>
         </div>
     </section>
 </section>
