--- a/PiBaristaMaster/src/main/webapp/quemSomos.html
+++ b/PiBaristaMaster/src/main/webapp/quemSomos.html
@@ -12,19 +12,63 @@
     <title>Quem somos</title>
 </head>
 <body>
-<nav class="menuSuperior">
-    <div><a href="index.html">Home</a></div>
-    <div><a href="quemSomos.html">Quem somos</a></div>
-    <div><a href="eventos.html">Eventos</a></div>
-    <div><a href="menu.jsp">Menu</a></div>
-    <div><a href="cursos.html">Cursos</a></div>
-    <div><a href="#rodape">Contato</a></div>
-</nav>
-</body>
-<section class="containerQuemSomosPrincipal">
-    <br><br>
-    <h1>Quem Somos em construção!!!</h1>
+<section class="containerCursosBaristaPrincipal">
+    <nav class="menuSuperior">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="quemSomos.html">Quem somos</a></div>
+        <div><a href="eventos.html">Eventos</a></div>
+        <div><a href="menu.jsp">Menu</a></div>
+        <div><a href="cursos.html">Cursos</a></div>
+        <div><a href="#rodape">Contato</a></div>
+    </nav>
+    <figure class="containerLogoCursoBarista">
+        <img src="img/Logotipo.png" alt="logotipo da Barista Master" height="150" width="150"/
+    </figure>
+    <div class="containerCursoBaristaTitulo">
+        <h1>A BARISTA MASTER</h1>
+        <h2>A Experiência Perfeita para os amantes de café.</h2>
+    </div>
 </section>
+<section class="containerTitulo">
+    <h2>Conheça a loja que combina ambiente aconchegante,<br>
+        expertise em café e deliciosas opções para harmonizar.</h2>
+</section>
+<section class="conteinerDescritivoCurso">
+    <div>
+        <div>
+            <h1>Onde nós estamos?</h1>
+            <p>Localizados na cidade de São Paulo, especificamente no bairro de Santo Amaro. A loja é de fácil
+                acesso para moradores locais e também para visitantes que desejam desfrutar de uma experiência de café
+                excepcional.</p>
+        </div>
+        <div>
+            <h1>Café & Aconchego</h1>
+            <p>Oferecemos aos nossos clientes, uma experiência completa, um ambiente cuidadosamente projetado para
+                transmitir uma atmosfera aconchegante e acolhedora, proporcionando um local perfeito para os
+                apreciadores de café relaxarem e desfrutarem da bebida.</p>
+        </div>
+        <div>
+            <h1>A Arte do Café, entre outras delícias</h1>
+            <p>Temos uma ampla variedade de opções de cafés, desde o tradicional espresso e até os preparos mais
+                elaborados.<br><br>
+                Outra vantagem da Barista Master é a qualidade dos produtos utilizados, a loja se preocupa em utilizar
+                apenas ingredientes de qualidade, cuidadosamente selecionados, oferecendo uma seleção de alimentos
+                deliciosos que harmonizam perfeitamente com o nosso café Gourmet.<br><br>
+                Além disso, os nossos clientes podem desfrutar de uma variedade de pães, bolos, salgados e sobremesas,
+                todos preparados com ingredientes frescos e de alta qualidade.</p>
+        </div>
+        <div>
+            <h1>Em resumo</h1>
+            <p>A Barista Master é uma loja em São Paulo que se destaca pelas suas principais
+                características, como ambiente acolhedor, equipe especializada, café de alta qualidade, alimentos
+                deliciosos e atendimento personalizado.<br><br>
+                Com sua localização conveniente, a loja se torna um destino
+                imperdível para todos aqueles que apreciam uma xícara de café perfeitamente preparada e uma experiência
+                única.</p>
+        </div>
+    </div>
+</section>
+</body>
 <footer>
     <section class="footer-container">
         <div>
