--- a/PiBaristaMaster/src/main/webapp/login.html
+++ b/PiBaristaMaster/src/main/webapp/login.html
@@ -2,17 +2,33 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <link href="css/index.css" rel="stylesheet" />
-  <link href="css/menuSuperior.css" rel="stylesheet" />
-  <link href="css/login.css" rel="stylesheet">
-  <meta charset="UTF-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="shortcut icon" href="./img/img_icon/favicon.png" type="image/x-icon" />
-  <title>Cursos</title>
+    <link href="css/login.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href="./img/img_icon/favicon.png" type="image/x-icon"/>
+    <title>Cursos</title>
 </head>
 
 <body>
-<img class="Logotipo" src="img/Logotipo.png" alt="logotipo da Barista Master" height="150" width="150"/>
+<section class="telaLogin">
+    <div class="login1">
+        <img class="imgLogin1" src="img/tela_login1.jpg"/>
+    </div>
+    <div class="login2"/>
+    <img class="Logotipo" src="img/Logotipo.png" alt="logotipo da Barista Master" height="150" width="150"/>
+
+    <div class="cxTextoLogin">
+        <h1>Login</h1>
+        <input type="text" name="login" placeholder="Login:" size="20" maxlength='30'>
+        <input type="password" name="senha" placeholder="Senha:" size="20" maxlength='8'>
+    </div>
+    <nav class="menuSuperior">
+        <div><a href="cadastroProduto.jsp">Entrar</a></div>
+        <br>
+        <div><a href="index.html">Voltar</a></div>
+    </nav>
+</section>
 </body>
 </html>
